@@ -1,16 +1,10 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
@@ -20,13 +14,12 @@ import uk.gov.hmcts.reform.fpl.model.OrderAction;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
 
 import java.time.LocalDateTime;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
 import static java.util.UUID.randomUUID;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.fpl.enums.ActionType.JUDGE_REQUESTED_CHANGE;
 import static uk.gov.hmcts.reform.fpl.enums.ActionType.SEND_TO_ALL_PARTIES;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.SEND_TO_JUDGE;
@@ -38,17 +31,15 @@ import static uk.gov.hmcts.reform.fpl.enums.Event.ACTION_CASE_MANAGEMENT_ORDER;
 @ActiveProfiles("integration-test")
 @WebMvcTest(CaseManagementOrderProgressionController.class)
 @OverrideAutoConfiguration(enabled = true)
-class CaseManagementOrderProgressionControllerTest {
+class CaseManagementOrderProgressionControllerTest extends AbstractControllerTest {
     private static final UUID uuid = randomUUID();
 
-    @Autowired
-    private MockMvc mockMvc;
-
-    @Autowired
-    private ObjectMapper mapper;
+    CaseManagementOrderProgressionControllerTest() {
+        super("cmo-progression");
+    }
 
     @Test
-    void aboutToSubmitReturnCaseManagementOrdersToLocalAuthorityWhenChangesAreRequested() throws Exception {
+    void aboutToSubmitReturnCaseManagementOrdersToLocalAuthorityWhenChangesAreRequested() {
         CaseManagementOrder order = CaseManagementOrder.builder()
             .status(SEND_TO_JUDGE)
             .action(OrderAction.builder()
@@ -56,15 +47,17 @@ class CaseManagementOrderProgressionControllerTest {
                 .build())
             .build();
 
-        Map<String, Object> data = ImmutableMap.of(CASE_MANAGEMENT_ORDER_JUDICIARY.getKey(), order);
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of(CASE_MANAGEMENT_ORDER_JUDICIARY.getKey(), order))
+            .build();
 
-        AboutToStartOrSubmitCallbackResponse response = makeRequest(buildCallbackRequest(data));
+        AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(buildCallbackRequest(caseDetails));
 
         assertThat(response.getData()).containsOnlyKeys(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey());
     }
 
     @Test
-    void aboutToSubmitShouldPopulateListServedCaseManagementOrdersWhenSendsToAllParties() throws Exception {
+    void aboutToSubmitShouldPopulateListServedCaseManagementOrdersWhenSendsToAllParties() {
         CaseManagementOrder order = CaseManagementOrder.builder()
             .status(SEND_TO_JUDGE)
             .id(uuid)
@@ -73,9 +66,11 @@ class CaseManagementOrderProgressionControllerTest {
                 .build())
             .build();
 
-        Map<String, Object> data = caseDataMap(order, LocalDateTime.now().minusDays(1));
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(caseDataMap(order, LocalDateTime.now().minusDays(1)))
+            .build();
 
-        AboutToStartOrSubmitCallbackResponse response = makeRequest(buildCallbackRequest(data));
+        AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(buildCallbackRequest(caseDetails));
 
         assertThat(response.getData()).containsOnlyKeys(SERVED_CASE_MANAGEMENT_ORDERS.getKey(), "hearingDetails");
     }
@@ -83,7 +78,7 @@ class CaseManagementOrderProgressionControllerTest {
     private Map<String, Object> caseDataMap(CaseManagementOrder order, LocalDateTime localDateTime) {
         return ImmutableMap.of(
             CASE_MANAGEMENT_ORDER_JUDICIARY.getKey(), order,
-            "hearingDetails", ImmutableList.of(Element.<HearingBooking>builder()
+            "hearingDetails", List.of(Element.<HearingBooking>builder()
                 .id(uuid)
                 .value(HearingBooking.builder()
                     .startDate(localDateTime)
@@ -91,25 +86,11 @@ class CaseManagementOrderProgressionControllerTest {
                 .build()));
     }
 
-    private CallbackRequest buildCallbackRequest(Map<String, Object> data) {
+    private CallbackRequest buildCallbackRequest(CaseDetails caseDetails) {
         return CallbackRequest.builder()
             .eventId(ACTION_CASE_MANAGEMENT_ORDER.getId())
-            .caseDetails(CaseDetails.builder()
-                .data(data)
-                .build())
+            .caseDetails(caseDetails)
             .build();
     }
 
-    private AboutToStartOrSubmitCallbackResponse makeRequest(CallbackRequest request)
-        throws Exception {
-        MvcResult result = mockMvc
-            .perform(post("/callback/cmo-progression/" + "about-to-submit")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(mapper.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
-
-        return mapper.readValue(result.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
-    }
 }
