@@ -1,16 +1,12 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
@@ -38,8 +34,6 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.ORDER_NOTIFICATION_TEMPLATE;
@@ -56,9 +50,7 @@ import static uk.gov.hmcts.reform.fpl.utils.DocumentManagementStoreLoader.docume
 @ActiveProfiles("integration-test")
 @WebMvcTest(GeneratedOrderController.class)
 @OverrideAutoConfiguration(enabled = true)
-class GeneratedOrderControllerTest {
-    private static final String AUTH_TOKEN = "Bearer token";
-    private static final String USER_ID = "1";
+class GeneratedOrderControllerTest extends AbstractControllerTest {
     private static final String LOCAL_AUTHORITY_CODE = "example";
     private static final String LOCAL_AUTHORITY_EMAIL_ADDRESS = "local-authority@local-authority.com";
     private static final String LOCAL_AUTHORITY_NAME = "Example Local Authority";
@@ -78,25 +70,18 @@ class GeneratedOrderControllerTest {
     @Autowired
     private DateFormatterService dateFormatterService;
 
-    @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private MockMvc mockMvc;
-
-    @Autowired
-    private ObjectMapper objectMapper;
+    GeneratedOrderControllerTest() {
+        super("create-order");
+    }
 
     @Test
-    void aboutToStartShouldReturnErrorsWhenFamilymanNumberIsNotProvided() throws Exception {
-        CallbackRequest request = CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .id(12345L)
-                .data(ImmutableMap.of("data", "some data"))
-                .build())
+    void aboutToStartShouldReturnErrorsWhenFamilymanNumberIsNotProvided() {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .id(12345L)
+            .data(Map.of("data", "some data"))
             .build();
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = makeRequest(request, "about-to-start");
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
 
         assertThat(callbackResponse.getErrors()).containsExactly("Enter Familyman case number");
     }
@@ -108,10 +93,10 @@ class GeneratedOrderControllerTest {
         DocmosisDocument docmosisDocument = new DocmosisDocument("order.pdf", pdf);
 
         given(docmosisDocumentGeneratorService.generateDocmosisDocument(any(), any())).willReturn(docmosisDocument);
-        given(uploadDocumentService.uploadPDF(USER_ID, AUTH_TOKEN, pdf, "blank_order_c21.pdf"))
+        given(uploadDocumentService.uploadPDF(userId, userAuthToken, pdf, "blank_order_c21.pdf"))
             .willReturn(document);
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = makeRequest(callbackRequest(), "mid-event");
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(callbackRequest());
 
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -124,7 +109,7 @@ class GeneratedOrderControllerTest {
 
     @Test
     void aboutToSubmitShouldAddC21OrderToCaseDataAndRemoveTemporaryCaseDataOrderFields() throws Exception {
-        AboutToStartOrSubmitCallbackResponse callbackResponse = makeRequest(callbackRequest(), "about-to-submit");
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(callbackRequest());
 
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -134,7 +119,7 @@ class GeneratedOrderControllerTest {
 
     @Test
     void aboutToSubmitShouldAddCareOrderToCaseDataAndRemoveTemporaryCaseDataOrderFields() throws Exception {
-        AboutToStartOrSubmitCallbackResponse callbackResponse = makeRequest(careOrderRequest(), "about-to-submit");
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(careOrderRequest());
 
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -145,7 +130,7 @@ class GeneratedOrderControllerTest {
     @Test
     void shouldTriggerOrderEventWhenSubmitted() throws Exception {
         String expectedCaseReference = "19898989";
-        makeSubmittedRequest(buildCallbackRequest());
+        postSubmittedEvent(buildCallbackRequest());
 
         verify(notificationClient, times(1)).sendEmail(
             eq(ORDER_NOTIFICATION_TEMPLATE), eq(LOCAL_AUTHORITY_EMAIL_ADDRESS),
@@ -195,33 +180,6 @@ class GeneratedOrderControllerTest {
         assertThat(caseData.getOrder()).isEqualTo(null);
         assertThat(caseData.getJudgeAndLegalAdvisor()).isEqualTo(null);
         assertThat(orders.get(0).getValue()).isEqualTo(expectedOrder);
-    }
-
-    private AboutToStartOrSubmitCallbackResponse makeRequest(CallbackRequest request, String endpoint)
-        throws Exception {
-        MvcResult mvc = mockMvc
-            .perform(post("/callback/create-order/" + endpoint)
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
-
-        return mapper.readValue(mvc.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
-    }
-
-    private void makeSubmittedRequest(CallbackRequest request)
-        throws Exception {
-        mockMvc
-            .perform(post("/callback/create-order/submitted")
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
     }
 
     private CallbackRequest buildCallbackRequest() {
